2001-08-15  christian@kdevelop.org
  * committed Eiffel language syntax highlighting support 

2001-08-08  rokrau@yahoo.com
  * committed changes to Kate's API necessary for integration of kate as
    a kpart into kdevelop

2001-05-13 Christoph Cullmann <crossfire@babylon2k.de>
  * after some time of learning for my "Abitur" now again some fixes ;):
    textlines stuff rewritten, selection fixed + +/- font zoom buttons in the part

2001-04-27 Christoph Cullmann <crossfire@babylon2k.de>
  * now the pluginconfig pages work ;)

2001-04-24 Joseph Wenninger <jowenn@bigfoot.com>
  *  now <keywords> and <types> is replaced by <list name="XXXX">

2001-04-20 Christoph Cullmann <crossfire@babylon2k.de>
  * new configdialog
  * enhanced pluginIface to supports configdialogpages

2001-04-14 Christoph Cullmann <crossfire@babylon2k.de>
  * now kateview has in iconborder too (without real function at the moment)

2001-04-10 Christoph Cullmann <crossfire@babylon2k.de>
  * bugfixes for drawBuffer stuff, next/prev viewspace, restoreView

2001-04-08 Christoph Cullmann <crossfire@babylon2k.de>
  * now encoding for files can be selected at settings dialog (not only UTF8, all possible encodings)
  * dropped old code -> use Waldo's code ;)

2001-04-07 Joseph Wenninger <jowenn@bigfoot.com>
  * Activated Waldo Bastian's NEW_CODE
  * Ported Highlighting to it

2001-04-05 Joseph Wenninger <jowenn@bigfoot.com>
  * Highlighting Configuration is now in kate/kwrite settings too
  * Made a cleanup of no longer used classes

2001-04-04 Christoph Cullmann <crossfire@babylon2k.de>
  * sidebar now again restores config

2001-04-03 Joseph Wenninger <jowenn@bigfoot.com>
  * Cristi Dumitrescu's PHP keyword / type list added

2001-04-01 Joseph Wenninger <jowenn@bigfoot.com>
  * Added a new widget KateStackTabWidget
    Now you can chose between tabbed or an
    KOffice Workspace like view for the file sidebar
    --> You can change this behaviour in the config dialog
  * Not implemented: