@@ -8,22 +8,18 @@
                         <item> inherit </item>
                         <item> creation </item>
                         <item> feature </item>
-                        <item> invariant </item>
                         <item> rename </item>
                         <item> redefine </item>
                         <item> undefine </item>
                         <item> select </item>
                         <item> export </item>
-                        <item> require </item>
                         <item> local </item>
                         <item> deferred </item>
                         <item> do </item>
                         <item> is </item>
                         <item> once </item>
-                        <item> ensure </item>
                         <item> alias </item>
                         <item> external </item>
-                        <item> check </item>
                         <item> rescue </item>
                         <item> debug </item>
                         <item> if </item>
@@ -33,11 +29,17 @@
                         <item> elseif </item>
                         <item> when </item>
                         <item> until </item>
-                        <item> variant </item>
                         <item> loop </item>
                         <item> then </item>
                         <item> obsolete </item>
                         <item> end </item>
+                </list>
+                <list name="assertions">
+                        <item> check </item>
+                        <item> ensure </item>
+                        <item> require </item>
+                        <item> variant </item>
+                        <item> invariant </item>
                 </list>
                 <contexts>
                         <context attribute="0" lineEndContext="0">
@@ -47,6 +49,7 @@
                                 <RegExpr attribute="4" context="0" String="'.'"/>
                                 <DetectChar attribute="5" context="1" char="&quot;"/>
                                 <Detect2Chars attribute="6" context="2" char="-" char1="-"/>
+                                <keyword attribute="7" context="0" String="assertions"/>
                         </context>
                         <context attribute="5" lineEndContext="0">
                                 <DetectChar attribute="5" context="0" char="&quot;"/>
@@ -61,9 +64,13 @@
                         <itemData name="Char"        defStyleNum="dsChar" />
                         <itemData name="String"      defStyleNum="dsString" />
                         <itemData name="Comment"     defStyleNum="dsComment" />
+                        <itemData name="Assertions"  defStyleNum="dsOthers" />
                 </itemDatas>
   </highlighting>
   <general>
+    <comments>
+      <comment name="singleLine" start="--" />
+    </comments>
     <keywords casesensitive="1" />
   </general>
 </language>
